--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Usman Awan",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "mongoose": "^5.13.8"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
